--- a/lib/language/en.json
+++ b/lib/language/en.json
@@ -497,5 +497,7 @@
   "Incomplete Entry": "Incomplete Selection",
   "Select at least 1!": "Please ensure that you select at least one restaurant type, entry, or session to proceed.",
   "You must select at least one session":"You must select at least one session",
-  "You must select at least one restaurant type.":"You must select at least one restaurant type."
+  "You must select at least one restaurant type.":"You must select at least one restaurant type.",
+  "Failure":"Failure",
+  "Please add at least one image before saving.":"Please add at least one image before saving."
 }
