--- a/lib/language/ar.json
+++ b/lib/language/ar.json
@@ -26,7 +26,7 @@
   "From here you can chat privately with other users": "من هنا يمكنك الدردشة بشكل خاص مع المستخدمين الآخرين",
   "Private Chat": "الدردشة الخاصة",
   "Notification": "الإشعارات",
-  "You can see the notifications that come to you, such as booking confirmation": "يمكنك رؤية الإشعارات التي تأتيك، مثل تأكيد الحجز",
+  "You can see the notifications that come to you, such as booking confirmation": "يمكنك رؤية حالة منشأتك من هنا",
   "Upgrade account": "ترقية الحساب",
   "From here you can upgrade account to Vip": "من هنا يمكنك ترقية الحساب إلى VIP",
   "Logout": "تسجيل الخروج",
@@ -53,7 +53,7 @@
   "Booking Status": "حالة الحجز",
   "Booking Accepted": "تم قبول الحجز",
   "Booking Rejected": "تم رفض الحجز",
-  "Name": "الاسم",
+  "Name": "الاسم (مطلوب)",
   "Date": "التاريخ",
   "Your booking could not be performed. Try Again!": "لم يتم إجراء حجزك. حاول مرة أخرى!",
   "Experience the best service": "لن تكون وحيدا بعد الآن",
@@ -278,7 +278,7 @@
   "Add your restaurant from here": "أضف مطعمك من هنا",
   "Add your Coffee from here": "أضف مقهاك من هنا",
   "Add your Hotel from here": "أضف فندقك من هنا",
-  "Provider Notifications": "إشعارات المزود",
+  "Provider Notifications": "حالة المنشأة",
   "No notifications available.": "لا توجد إشعارات متاحة.",
   "Accepted": "مقبول",
   "Rejected": "مرفوض",
@@ -425,6 +425,7 @@
   "NameEN": "اسم بالإلنجليزي",
   "You have added 4 Posts in a month. You can't add more!": "لقد أضفت 4 منشورات هذا الشهر. لا يمكنك إضافة المزيد!",
   "You have added 8 Posts in a month. You can't add more!": "لقد أضفت 8 منشورات هذا الشهر. لا يمكنك إضافة المزيد!",
+  "You have added 1 Post in a month. You can't add more!": "لقد أضفت منشور واحد هذا الشهر. لا يمكنك إضافة المزيد!",
   "Subscription Expired": "انتهت صلاحية الاشتراك",
   "Your subscription has expired. You have been reverted to the Star account.": "انتهت صلاحية اشتراكك. تم تحويلك إلى حساب ستار.",
   "Your estate has been successfully updated.": "تم تحديث العقار الخاص بك بنجاح.",
@@ -500,5 +501,25 @@
   "You must select at least one session": "يجب عليك اختيار جلسة واحدة على الأقل",
   "You must select at least one restaurant type.": "يجب عليك اختيار نوع واحد على الأقل من المطاعم.",
   "Failure": "فشل",
-  "Please add at least one image before saving.": "يرجى إضافة صورة واحدة على الأقل قبل الحفظ."
+  "Please add at least one image before saving.": "يرجى إضافة صورة واحدة على الأقل قبل الحفظ.",
+  "Uploading your media...": "جارٍ رفع منشورك...",
+  "Permanently delete your account and all data.": "حذف حسابك وجميع بياناتك نهائيًا.",
+  "No file selected": "لم يتم تحديد أي ملف",
+  "An error occurred during upload": "حدث خطأ أثناء التحميل",
+  "Missing Owner Information": "معلومات المالك مفقودة",
+  "Your personal information is missing, please fill out all your personal information in order to add an estate": "معلوماتك الشخصية مفقودة، يرجى ملء جميع معلوماتك الشخصية لإضافة عقار",
+  "Location Not Set": "لم يتم تعيين الموقع",
+  "Please select the location of your estate": "يرجى تحديد موقع العقار المنشأة بك",
+  "(Required)": "(مطلوب)",
+  "(Select at least 1)": "(اختر واحدًا على الأقل)",
+  "No new booking requests": "لا توجد طلبات حجز جديدة",
+  "No accepted booking requests": "لا توجد طلبات حجز مقبولة",
+  "No rejected booking requests": "لا توجد طلبات حجز مرفوضة",
+  "Please upload the Commercial Registration PDF before proceeding.": "يرجى تحميل ملف السجل التجاري بصيغة PDF قبل المتابعة.",
+  "Please upload the Tax Number PDF before proceeding.": "يرجى تحميل ملف الرقم الضريبي بصيغة PDF قبل المتابعة.",
+  "Edit Estate Location": "تعديل موقع منشأتك",
+  "You have not added any estates": "لم تقم بإضافة أي منشأة",
+  "This estate has been rejected.": "تم رفض هذه المنشأة.",
+  "Phone number": "رقم الهاتف",
+  "Enter your Phone Number": "أدخل رقم هاتفك"
 }
