--- a/lib/language/en.json
+++ b/lib/language/en.json
@@ -26,7 +26,7 @@
   "From here you can chat privately with other users": "From here you can chat privately with other users",
   "Private Chat": "Private Chat",
   "Notification": "Notification",
-  "You can see the notifications that come to you, such as booking confirmation": "You can see the notifications that come to you, such as booking confirmation",
+  "You can see the notifications that come to you, such as booking confirmation": "You can see your estate's status from here",
   "Upgrade account": "Upgrade account",
   "From here you can upgrade account to Vip": "From here you can upgrade account to Vip",
   "Logout": "Logout",
@@ -57,7 +57,7 @@
   "Booking Accepted": "Booking Accepted",
   "Booking Rejected": "Booking Rejected",
   "Booking ID": "Booking ID",
-  "Name": "Name",
+  "Name": "Name (Required)",
   "Date": "Date",
   "Time": "Time",
   "Your booking could not be performed. Try Again!": "Your booking could not be performed. Try Again!",
@@ -105,7 +105,7 @@
   "Information in Arabic":"Information in Arabic",
   "Bio":"Bio",
   "Legal information":"Legal information",
-  "Upload Facility Document (PDF)": "Upload Facility Document (PDF)",
+  "Upload Facility Document (PDF)": "Upload Commercial Registration (PDF)",
   "Upload Image":"Upload Image",
   "Image uploaded successfully":"Image uploaded successfully",
   "Failed to upload image":"Failed to upload image",
@@ -280,7 +280,7 @@
   "Add your restaurant from here": "Add your restaurant from here",
   "Add your Coffee from here": "Add your Coffee from here",
   "Add your Hotel from here": "Add your Hotel from here",
-  "Provider Notifications":"Provider Notifications",
+  "Provider Notifications":"Estate's status",
   "No notifications available.":"No notifications available.",
   "Accepted":"Accepted",
   "Rejected":"Rejected",
@@ -499,5 +499,26 @@
   "You must select at least one session":"You must select at least one session",
   "You must select at least one restaurant type.":"You must select at least one restaurant type.",
   "Failure":"Failure",
-  "Please add at least one image before saving.":"Please add at least one image before saving."
+  "Please add at least one image before saving.":"Please add at least one image before saving.",
+  "Uploading your media...": "Uploading your post...",
+  "Permanently delete your account and all data.": "Permanently delete your account and all data.",
+  "No file selected": "No file selected",
+  "An error occurred during upload": "An error occurred during upload",
+  "Missing Owner Information": "Missing Owner Information",
+  "Your personal information is missing, please fill out all your personal information in order to add an estate": "Your personal information is missing, please fill out all your personal information in order to add an estate",
+  "Location Not Set": "Location Not Set",
+  "Please select the location of your estate": "Please select the location of your estate",
+  "(Required)": "(Required)",
+  "(Select at least 1)": "(At least 1)",
+  "No new booking requests": "No new booking requests",
+  "No accepted booking requests": "No accepted booking requests",
+  "No rejected booking requests": "No rejected booking requests",
+  "Please upload the Commercial Registration PDF before proceeding.": "Please upload the Commercial Registration PDF before proceeding.",
+  "Please upload the Tax Number PDF before proceeding.": "Please upload the Tax Number PDF before proceeding.",
+  "Edit Estate Location": "Edit Estate Location",
+  "You have not added any estates": "You have not added any estates",
+  "This estate has been rejected.": "This estate has been rejected.",
+  "You have added 1 Post in a month. You can't add more!": "You have added 1 Post in a month. You can't add more!",
+  "Phone number": "Phone number",
+  "Enter your Phone Number": "Enter your Phone Number"
 }
