new update commit 2

--- a/lib/language/ar.json
+++ b/lib/language/ar.json
@@ -380,7 +380,7 @@
   "No messages": "لا رسائل",
   "There is music": "يوجد موسيقى",
   "There is no music": "لا توجد موسيقى",
-  "We have kids area": "يوجد منطقة للأطفال",
+  "We have kids area": "منطقة للأطفال",
   "We dont have kids area": "لا توجد منطقة للأطفال",
   "We have jaccuzzi": "يوجد جاكوزي",
   "We dont have jaccuzzi": "لا يوجد جاكوزي",
@@ -521,5 +521,21 @@
   "You have not added any estates": "لم تقم بإضافة أي منشأة",
   "This estate has been rejected.": "تم رفض هذه المنشأة.",
   "Phone number": "رقم الهاتف",
-  "Enter your Phone Number": "أدخل رقم هاتفك"
+  "Enter your Phone Number": "أدخل رقم هاتفك",
+  "Additional Services (Optional)": "الخدمات الإضافية (اختياري)",
+  "Service Name": "اسم الخدمة",
+  "Service Price": "سعر الخدمة",
+  "Add Service": "إضافة الخدمة",
+  "Service Name Ar": "اسم الخدمة بالعربية",
+  "Select at least 1 Hotel Room!": "اختر على الأقل غرفة فندق واحدة!",
+  "Service added successfully": "تمت إضافة الخدمة بنجاح",
+  "Service deleted successfully": "تم حذف الخدمة بنجاح",
+  "Is Smoking Allowed in some rooms?": "هل يُسمح بالتدخين في بعض الغرف؟",
+  "New Booking Request": "لديك حجز جديد",
+  "You have": "لديك",
+  "new booking request(s).": "طلب حجز جديد",
+  "Session Ended": "انتهت الجلسة",
+  "Your account has been logged in from another device. This session will be closed.": "تم تسجيل الدخول إلى حسابك من جهاز آخر. سيتم إنهاء هذه الجلسة.",
+  "Number of Days": "عدد الأيام",
+  "Total Price": "السعر الإجمالي"
 }
