--- a/lib/language/en.json
+++ b/lib/language/en.json
@@ -380,7 +380,7 @@
   "No messages":"No messages",
   "There is music":"There is music",
   "There is no music":"There is no music",
-  "We have kids area":"We have kids area",
+  "We have kids area":"Kids Area",
   "We dont have kids area":"We dont have kids area",
   "We have jaccuzzi":"We have jaccuzzi",
   "We dont have jaccuzzi":"We dont have jaccuzzi",
@@ -520,5 +520,21 @@
   "This estate has been rejected.": "This estate has been rejected.",
   "You have added 1 Post in a month. You can't add more!": "You have added 1 Post in a month. You can't add more!",
   "Phone number": "Phone number",
-  "Enter your Phone Number": "Enter your Phone Number"
+  "Enter your Phone Number": "Enter your Phone Number",
+  "Additional Services (Optional)":"Additional Services (Optional)",
+  "Service Name":"Service Name",
+  "Service Price":"Service Price",
+  "Add Service":"Add Service",
+  "Service Name Ar": "Service Name Ar",
+  "Select at least 1 Hotel Room!": "Select at least 1 Hotel Room!",
+  "Service added successfully":"Service added successfully",
+  "Service deleted successfully":"Service deleted successfully",
+  "Is Smoking Allowed in some rooms?": "Is Smoking Allowed in some rooms?",
+  "New Booking Request": "New Booking Request",
+  "You have": "You have",
+  "new booking request(s).": "new booking request(s).",
+  "Session Ended": "Session Ended",
+  "Your account has been logged in from another device. This session will be closed.": "Your account has been logged in from another device. This session will be closed.",
+  "Number of Days": "Number of Days",
+  "Total Price": "Total Price"
 }
