latest update customer

--- a/lib/language/ar.json
+++ b/lib/language/ar.json
@@ -430,7 +430,7 @@
   "Your subscription has expired. You have been reverted to the Star account.": "انتهت صلاحية اشتراكك. تم تحويلك إلى حساب ستار.",
   "Your estate has been successfully updated.": "تم تحديث العقار الخاص بك بنجاح.",
   "No Changes Detected": "لم يتم الكشف عن أي تغييرات",
-  "You did not make any changes to your estate.": "لم تقم بإجراء أي تغييرات على العقار الخاص بك.",
+  "You did not make any changes to your estate.": "لم تقم بإجراء أي تغييرات على المنشأة الخاصة بك.",
   "Are you sure you want to delete this estate? Deleting this estate will cause deleting all booking records, posts, and group chats.": "هل أنت متأكد أنك تريد حذف هذا العقار؟ حذف هذا العقار سيؤدي إلى حذف جميع سجلات الحجز، المنشورات، والدردشات الجماعية.",
   "Delete Estate": "حذف العقار",
   "Your estate has been successfully deleted.": "تم حذف العقار بنجاح.",
@@ -537,5 +537,30 @@
   "Session Ended": "انتهت الجلسة",
   "Your account has been logged in from another device. This session will be closed.": "تم تسجيل الدخول إلى حسابك من جهاز آخر. سيتم إنهاء هذه الجلسة.",
   "Number of Days": "عدد الأيام",
-  "Total Price": "السعر الإجمالي"
+  "Total Price": "السعر الإجمالي",
+  "No recent booking requests": "لا توجد طلبات حجز حديثة",
+  "Recent Bookings": "الحجوزات الأخيرة",
+  "Request Accepted": "تم قبول الطلب",
+  "Request Rejected": "تم رفض الطلب",
+  "The request has been accepted successfully.": "تم قبول الطلب بنجاح.",
+  "The request has been rejected successfully.": "تم رفض الطلب بنجاح.",
+  "Processing...": "تحت الإجراء",
+  "Please wait": "يرجى الإنتظار",
+  "Phone": "الهاتف",
+  "Search by Booking ID or Phone Number": "البحث برقم الحجز أو رقم الجوال",
+  "Incorrect booking details": "تفاصيل الحجز غير صحيحة",
+  "Unavailability of required facilities": "عدم توفر المرافق المطلوبة",
+  "Booking is full": "الحجز ممتلئ",
+  "Other": "أخرى",
+  "Select Rejection Reason": "اختر سبب الرفض",
+  "Rejection Reason": "سبب الرفض",
+  "Please specify": "يرجى التحديد",
+  "Sign up with Google": "سجّل الدخول باستخدام جوجل",
+  "This phone number is temporarily blocked. Please try again later.": "تم حظر رقم الهاتف هذا مؤقتًا. يرجى المحاولة مرة أخرى لاحقًا.",
+  "Too many requests from this phone number. Please try again later.": "تم إرسال عدد كبير جدًا من الطلبات من هذا الرقم. يرجى المحاولة لاحقًا.",
+  "Edit": "تعديل",
+  "Please add at least one image": "يرجى إضافة صورة واحدة على الأقل",
+  "If you’re a customer, download our Customer App": "إذا كنت عميلاً، حمّل تطبيق العملاء الخاص بنا",
+  "Download": "تحميل"
+
 }
