--- a/lib/language/en.json
+++ b/lib/language/en.json
@@ -536,5 +536,29 @@
   "Session Ended": "Session Ended",
   "Your account has been logged in from another device. This session will be closed.": "Your account has been logged in from another device. This session will be closed.",
   "Number of Days": "Number of Days",
-  "Total Price": "Total Price"
+  "Total Price": "Total Price",
+  "No recent booking requests": "No recent booking requests",
+  "Recent Bookings": "Recent Bookings",
+  "Request Accepted": "Request Accepted",
+  "Request Rejected": "Request Rejected",
+  "The request has been accepted successfully.": "The request has been accepted successfully.",
+  "The request has been rejected successfully.": "The request has been rejected successfully.",
+  "Processing...": "Processing...",
+  "Please wait": "Please wait",
+  "Phone": "Phone",
+  "Search by Booking ID or Phone Number": "Search by Booking ID or Phone Number",
+  "Incorrect booking details": "Incorrect booking details",
+  "Unavailability of required facilities": "Unavailability of required facilities",
+  "Booking is full": "Booking is full",
+  "Other": "Other",
+  "Select Rejection Reason": "Select Rejection Reason",
+  "Rejection Reason": "Rejection Reason",
+  "Please specify": "Please specify",
+  "Sign up with Google": "Sign up with Google",
+  "This phone number is temporarily blocked. Please try again later.": "This phone number is temporarily blocked. Please try again later.",
+  "Too many requests from this phone number. Please try again later.": "Too many requests from this phone number. Please try again later.",
+  "Edit": "Edit",
+  "Please add at least one image": "Please add at least one image",
+  "If you’re a customer, download our Customer App": "If you’re a customer, download our Customer App",
+  "Download": "Download"
 }
