hussam new update 6/18/2025

--- a/lib/language/ar.json
+++ b/lib/language/ar.json
@@ -121,7 +121,7 @@
   "Is there Swimming Pool?": "هل يوجد حمام سباحة؟",
   "Is there Barber?": "هل يوجد حلاق؟",
   "Is there Massage?": "هل يوجد مساج؟",
-  "Is there Gym?": "هل يوجد بوفيه رياضية؟",
+  "Is there Gym?": "هل يوجد صالة رياضية؟",
   "Location information": "معلومات الموقع",
   "What We have ?": "ماذا لدينا؟",
   "Information in English": "المعلومات بالإنجليزية",
@@ -502,7 +502,7 @@
   "You must select at least one restaurant type.": "يجب عليك اختيار نوع واحد على الأقل من المطاعم.",
   "Failure": "فشل",
   "Please add at least one image before saving.": "يرجى إضافة صورة واحدة على الأقل قبل الحفظ.",
-  "Uploading your media...": "جارٍ رفع منشورك...",
+  "Uploading your media...": "جارٍ رفع منشورك\nيرجى عدم إغلاق التطبيق",
   "Permanently delete your account and all data.": "حذف حسابك وجميع بياناتك نهائيًا.",
   "No file selected": "لم يتم تحديد أي ملف",
   "An error occurred during upload": "حدث خطأ أثناء التحميل",
@@ -560,7 +560,43 @@
   "Too many requests from this phone number. Please try again later.": "تم إرسال عدد كبير جدًا من الطلبات من هذا الرقم. يرجى المحاولة لاحقًا.",
   "Edit": "تعديل",
   "Please add at least one image": "يرجى إضافة صورة واحدة على الأقل",
+  "Your personal information is incomplete. Please fill out the required fields.": "معلوماتك الشخصية غير مكتملة. يرجى تعبئة الحقول المطلوبة.",
+  "Incomplete Profile": "الملف الشخصي غير مكتمل",
+  "Update Info": "تحديث المعلومات",
+  "Number of Guests": "عدد الضيوف",
   "If you’re a customer, download our Customer App": "إذا كنت عميلاً، حمّل تطبيق العملاء الخاص بنا",
-  "Download": "تحميل"
-
+  "Download": "تحميل",
+  "DoNotCloseApp": "يرجى عدم إغلاق التطبيق",
+  "This email is already in use.": "هذا البريد الإلكتروني مستخدم بالفعل.",
+  "Please re-login and try again to change your email.": "يرجى تسجيل الدخول مرة أخرى ثم المحاولة لتغيير بريدك الإلكتروني.",
+  "Failed to update email.": "فشل في تحديث البريد الإلكتروني.",
+  "Update failed": "فشل التحديث",
+  "Branch in English": "الفرع باللغة الإنجليزية",
+  "Branch in Arabic": "الفرع باللغة العربية",
+  "Branch name (Required)": "اسم الفرع (مطلوب)",
+  "Failed to remove image": "فشل حذف الصور",
+  "Incomplete Branch Info": "معلومات الفرع غير مكتملة",
+  "Please fill out the branches in English and Arabic for": "يرجى تعبئة بيانات الفروع بالإنجليزية والعربية لـ",
+  "Menu Link": "رابط القائمة",
+  "Could not open link": "تعذّر فتح الرابط",
+  "Email or password is incorrect": "البريد الإلكتروني أو كلمة المرور غير صحيحة",
+  "This user account has been disabled.": "تم تعطيل حساب المستخدم هذا.",
+  "That email address is not valid.": "عنوان البريد الإلكتروني هذا غير صالح.",
+  "No account found for that email.": "لم يتم العثور على حساب لهذا البريد الإلكتروني.",
+  "Incorrect password. Please try again.": "كلمة المرور غير صحيحة. يرجى المحاولة مرة أخرى.",
+  "Verification Email Sent": "تم إرسال بريد التحقق",
+  "Please check your inbox (and spam folder) to verify your email.": "يرجى التحقق من صندوق الوارد (ومجلد الرسائل غير المرغوب فيها) للتحقق من بريدك الإلكتروني.",
+  "Failed to send verification email.": "فشل في إرسال بريد التحقق.",
+  "Verify Email": "تحقق من البريد الإلكتروني",
+  "You have added 1 Post in a month. You cannot add more!": "لقد قمت بإضافة منشور واحد هذا الشهر. لا يمكنك إضافة المزيد!",
+  "You have added 4 Posts in a month. You cannot add more!": "لقد قمت بإضافة 4 منشورات هذا الشهر. لا يمكنك إضافة المزيد!",
+  "You have added 8 Posts in a month. You cannot add more!": "لقد قمت بإضافة 8 منشورات هذا الشهر. لا يمكنك إضافة المزيد!",
+  "We couldn’t send an OTP to this number. It may be blocked by your carrier or by DND/Do-Not-Disturb settings. Please disable DND or use a different mobile number.": "لم نتمكن من إرسال رمز التحقق إلى هذا الرقم. قد يكون محظورًا من قبل مزود الخدمة أو بسبب إعدادات عدم الإزعاج (DND). يرجى تعطيل خاصية عدم الإزعاج أو استخدام رقم هاتف آخر.",
+  "Phone verification failed": "فشل التحقق من رقم الهاتف",
+  "We have blocked all requests from this device due to unusual activity. Try again later.": "لقد قمنا بحظر جميع الطلبات من هذا الجهاز بسبب نشاط غير معتاد. يرجى المحاولة مرة أخرى لاحقًا.",
+  "Estate's branch name in arabic is missing": "اسم فرع المنشأة باللغة العربية مفقود",
+  "Estate's branch name in english is missing": "اسم فرع المنشأة باللغة الإنجليزية مفقود",
+  "The phone number format is invalid. Use +9665XXXXXXXX.": "تنسيق رقم الهاتف غير صالح. استخدم +9665XXXXXXXX.",
+  "SMS quota exceeded for this number. Please wait and try again later.": "تم تجاوز حد رسائل SMS لهذا الرقم. الرجاء الانتظار ثم المحاولة مرة أخرى.",
+  "Too many attempts. Please wait a while before retrying.": "عدد المحاولات كبير جدًا. الرجاء الانتظار قليلاً قبل المحاولة مرة أخرى."
 }
