--- a/lib/language/en.json
+++ b/lib/language/en.json
@@ -500,7 +500,7 @@
   "You must select at least one restaurant type.":"You must select at least one restaurant type.",
   "Failure":"Failure",
   "Please add at least one image before saving.":"Please add at least one image before saving.",
-  "Uploading your media...": "Uploading your post...",
+  "Uploading your media...": "Uploading your media\nPlease do not close the app.",
   "Permanently delete your account and all data.": "Permanently delete your account and all data.",
   "No file selected": "No file selected",
   "An error occurred during upload": "An error occurred during upload",
@@ -559,6 +559,43 @@
   "Too many requests from this phone number. Please try again later.": "Too many requests from this phone number. Please try again later.",
   "Edit": "Edit",
   "Please add at least one image": "Please add at least one image",
+  "Your personal information is incomplete. Please fill out the required fields.": "Your personal information is incomplete. Please fill out the required fields.",
+  "Incomplete Profile": "Incomplete Profile",
+  "Update Info": "Update Info",
+  "Number of Guests": "Number of Guests",
   "If you’re a customer, download our Customer App": "If you’re a customer, download our Customer App",
-  "Download": "Download"
+  "Download": "Download",
+  "DoNotCloseApp": "Please do not close the application",
+  "This email is already in use.": "This email is already in use.",
+  "Please re-login and try again to change your email.": "Please re-login and try again to change your email.",
+  "Failed to update email.": "Failed to update email.",
+  "Update failed": "Update failed",
+  "Branch in English":"Branch in English",
+  "Branch in Arabic":"Branch in Arabic",
+  "Branch name (Required)":"Branch name (Required)",
+  "Failed to remove image": "Failed to remove image",
+  "Incomplete Branch Info":"Incomplete Branch Info",
+  "Please fill out the branches in English and Arabic for":"Please fill out the branches in English and Arabic for",
+  "Menu Link":"Menu Link",
+  "Could not open link":"Could not open link",
+  "Email or password is incorrect": "Email or password is incorrect",
+  "This user account has been disabled.": "This user account has been disabled.",
+  "That email address is not valid.": "That email address is not valid.",
+  "No account found for that email.": "No account found for that email.",
+  "Incorrect password. Please try again.": "Incorrect password. Please try again.",
+  "Verification Email Sent": "Verification Email Sent",
+  "Please check your inbox (and spam folder) to verify your email.": "Please check your inbox (and spam folder) to verify your email.",
+  "Failed to send verification email.": "Failed to send verification email.",
+  "Verify Email": "Verify Email",
+  "You have added 1 Post in a month. You cannot add more!": "You have added 1 Post in a month. You cannot add more!",
+  "You have added 4 Posts in a month. You cannot add more!": "You have added 4 Posts in a month. You cannot add more!",
+  "You have added 8 Posts in a month. You cannot add more!": "You have added 8 Posts in a month. You cannot add more!",
+  "We couldn’t send an OTP to this number. It may be blocked by your carrier or by DND/Do-Not-Disturb settings. Please disable DND or use a different mobile number.": "We couldn’t send an OTP to this number. It may be blocked by your carrier or by DND/Do-Not-Disturb settings. Please disable DND or use a different mobile number.",
+  "Phone verification failed": "Phone verification failed",
+  "We have blocked all requests from this device due to unusual activity. Try again later.": "We have blocked all requests from this device due to unusual activity. Try again later.",
+  "Estate's branch name in arabic is missing": "Estate's branch name in arabic is missing",
+  "Estate's branch name in english is missing": "Estate's branch name in english is missing",
+  "The phone number format is invalid. Use +9665XXXXXXXX.": "The phone number format is invalid. Use +9665XXXXXXXX.",
+  "SMS quota exceeded for this number. Please wait and try again later.": "SMS quota exceeded for this number. Please wait and try again later.",
+  "Too many attempts. Please wait a while before retrying.": "Too many attempts. Please wait a while before retrying."
 }
