update for hussam 8/3/2025

--- a/lib/language/ar.json
+++ b/lib/language/ar.json
@@ -596,7 +596,55 @@
   "We have blocked all requests from this device due to unusual activity. Try again later.": "لقد قمنا بحظر جميع الطلبات من هذا الجهاز بسبب نشاط غير معتاد. يرجى المحاولة مرة أخرى لاحقًا.",
   "Estate's branch name in arabic is missing": "اسم فرع المنشأة باللغة العربية مفقود",
   "Estate's branch name in english is missing": "اسم فرع المنشأة باللغة الإنجليزية مفقود",
-  "The phone number format is invalid. Use +9665XXXXXXXX.": "تنسيق رقم الهاتف غير صالح. استخدم +9665XXXXXXXX.",
+  "The phone number format is invalid. Use +9665XXXXXXXX.": "يرجى إدخال رقم هاتف صالح بصيغة دولية (مثل +9665XXXXXXX). تأكد من بدء الرقم برمز الدولة الصحيح واحتوائه على أرقام فقط.",
   "SMS quota exceeded for this number. Please wait and try again later.": "تم تجاوز حد رسائل SMS لهذا الرقم. الرجاء الانتظار ثم المحاولة مرة أخرى.",
-  "Too many attempts. Please wait a while before retrying.": "عدد المحاولات كبير جدًا. الرجاء الانتظار قليلاً قبل المحاولة مرة أخرى."
+  "Too many attempts. Please wait a while before retrying.": "عدد المحاولات كبير جدًا. الرجاء الانتظار قليلاً قبل المحاولة مرة أخرى.",
+  "Enter OTP Code": "أدخل رمز التحقق",
+  "This phone number is already in use": "رقم الهاتف مأخوذ",
+  "Please choose a different number": "يرجى اختيار رقم مختلف",
+  "OTP Expired": "انتهت صلاحية الرمز",
+  "The code has expired – please resend.": "انتهت صلاحية الرمز - يرجى إعادة الإرسال",
+  "Invalid Phone Number": "رقم الهاتف غير صالح",
+  "Use country code such as +966XXXX": "استخدم رمز الدولة مثل +966XXXX",
+  "Too many requests": "عدد كبير جدًا من المحاولات",
+  "Please wait and try again later.": "يرجى الانتظار والمحاولة لاحقًا.",
+  "No Number Provided": "لم يتم إدخال رقم",
+  "Please enter a phone number to receive the verification code.": "يرجى إدخال رقم الهاتف لاستلام رمز التحقق.",
+  "Please try again later": "يرجى المحاولة لاحقًا",
+  "Email must not be empty": "يجب عدم ترك البريد الإلكتروني فارغًا",
+  "Phone Number must not be empty": "يجب عدم ترك رقم الهاتف فارغًا",
+  "Wrong Otp Code Entered. Please enter the correct Otp.": "تم إدخال رمز تحقق خاطئ. يرجى إدخال الرمز الصحيح.",
+  "Phone Updated": "تم تحديث رقم الهاتف",
+  "Your phone number has been updated successfully.": "تم تحديث رقم هاتفك بنجاح.",
+  "Floor Plan (Optional)": "مخطط الطابق (اختياري)",
+  "Configure Floor Plan": "تهيئة مخطط الطابق",
+  "Reconfigure Floor Plan": "إعادة تهيئة مخطط الطابق",
+  "Configured Layout ID:": "معرّف المخطط المُهيأ:",
+  "Enter Room Size": "أدخل أبعاد الغرفة",
+  "Width (meters)": "العرض (بالمتر)",
+  "Height (meters)": "الارتفاع (بالمتر)",
+  "Start Building": "ابدأ البناء",
+  "Height & Width must be entered": "يجب إدخال الارتفاع والعرض",
+  "table": "طاولة",
+  "seat": "مقعد",
+  "toilet": "دورة مياه",
+  "decoration": "زخرفة",
+  "bar": "منطقة البار",
+  "rectangle": "مستطيل",
+  "square": "مربع",
+  "circle": "دائرة",
+  "chair": "كرسي",
+  "sofa": "أريكة",
+  "door": "باب",
+  "window": "نافذة",
+  "view": "إطلالة",
+  "Table + Chair": "طاولة + كرسي",
+  "Table + Sofa": "طاولة + أريكة",
+  "Pick default color": "اختر اللون الافتراضي",
+  "Room": "الغرفة",
+  "No spots added. Please add spots before saving.": "لم تتم إضافة أي عناصر. يرجى إضافة العناصر قبل الحفظ.",
+  "Floor plan ready": "مخطط الطابق جاهز",
+  "Change Color": "تغيير اللون",
+  "Decrease Size": "تصغير الحجم",
+  "Increase Size": "تكبير الحجم"
 }
