--- a/lib/language/en.json
+++ b/lib/language/en.json
@@ -597,5 +597,53 @@
   "Estate's branch name in english is missing": "Estate's branch name in english is missing",
   "The phone number format is invalid. Use +9665XXXXXXXX.": "The phone number format is invalid. Use +9665XXXXXXXX.",
   "SMS quota exceeded for this number. Please wait and try again later.": "SMS quota exceeded for this number. Please wait and try again later.",
-  "Too many attempts. Please wait a while before retrying.": "Too many attempts. Please wait a while before retrying."
+  "Too many attempts. Please wait a while before retrying.": "Too many attempts. Please wait a while before retrying.",
+  "Enter OTP Code": "Enter OTP Code",
+  "This phone number is already in use": "This phone number is taken",
+  "Please choose a different number": "Please choose a different number",
+  "OTP Expired": "OTP Expired",
+  "The code has expired – please resend.": "The code has expired – please resend.",
+  "Invalid Phone Number": "Invalid Phone Number",
+  "Use country code such as +966XXXX": "Please enter a valid phone number in international format (e.g. +9665XXXXXXX). Make sure it starts with the correct country code and contains only numbers.",
+  "Too many requests": "Too many requests",
+  "Please wait and try again later.": "Please wait and try again later.",
+  "No Number Provided": "No Number Provided",
+  "Please enter a phone number to receive the verification code.": "Please enter a phone number to receive the verification code.",
+  "Please try again later": "Please try again later",
+  "Email must not be empty": "Email must not be empty",
+  "Phone Number must not be empty": "Phone Number must not be empty",
+  "Wrong Otp Code Entered. Please enter the correct Otp.": "Wrong Otp Code Entered. Please enter the correct Otp.",
+  "Phone Updated": "Phone Updated",
+  "Your phone number has been updated successfully.": "Your phone number has been updated successfully.",
+  "Floor Plan (Optional)": "Floor Plan (Optional)",
+  "Configure Floor Plan": "Configure Floor Plan",
+  "Reconfigure Floor Plan": "Reconfigure Floor Plan",
+  "Configured Layout ID:": "Configured Layout ID:",
+  "Enter Room Size": "Enter Room Size",
+  "Width (meters)": "Width (meters)",
+  "Height (meters)": "Height (meters)",
+  "Start Building": "Start Building",
+  "Height & Width must be entered": "Height & Width must be entered",
+  "table": "Table",
+  "seat": "Seat",
+  "toilet": "Toilet",
+  "decoration": "Decoration",
+  "bar": "Bar Section",
+  "rectangle": "Rectangle",
+  "square": "Square",
+  "circle": "Circle",
+  "chair": "Chair",
+  "sofa": "Sofa",
+  "door": "Door",
+  "window": "Window",
+  "view": "View",
+  "Table + Chair": "Table + Chair",
+  "Table + Sofa": "Table + Sofa",
+  "Pick default color": "Pick default color",
+  "Room": "Room",
+  "No spots added. Please add spots before saving.": "No spots added. Please add spots before saving.",
+  "Floor plan ready": "Floor plan ready",
+  "Change Color": "Change Color",
+  "Decrease Size": "Decrease Size",
+  "Increase Size": "Increase Size"
 }
